--- a/webdesign/index.html
+++ b/webdesign/index.html
@@ -64,12 +64,14 @@
     </main><!-- /.container -->
 
     <footer class="blog-footer">
-      <div class="row no-gutters">
-        <div class="col">© NET21 s.r.o. </div>
-        <div class="col">
-          <a href="/">Home</a> |
-          <a href="about.html">About</a> |
-          <a href="privacypolicy.html">Privacy Policy</a>
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col">© Tomas Tulka, NET21 s.r.o. </div>
+          <div class="col text-right">
+            <a href="/">Home</a> |
+            <a href="about.html">About</a> |
+            <a href="privacypolicy.html">Privacy Policy</a>
+          </div>
         </div>
       </div>
     </footer>
