--- a/webdesign/index.html
+++ b/webdesign/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <title>Tomas Tulka's Blog</title>
@@ -77,7 +77,6 @@
           <div class="col">© Tomas Tulka, NET21 s.r.o. </div>
           <div class="col text-right">
             <a href="/">Home</a> |
-            <a href="about.html">About</a> |
             <a href="privacypolicy.html">Privacy Policy</a>
           </div>
         </div>
