vue.js first tries

--- a/_webdesign/index.html
+++ b/_webdesign/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Tomas Tulka's Blog</title>
@@ -40,8 +40,6 @@
   
   
     <main role="main" class="container">          
-      
-      <div class="row">
       
         <div class="blog-post">
             <h2 class="blog-post-title">Sample blog post</h2>
