--- a/resources/article.html
+++ b/resources/article.html
@@ -23,14 +23,11 @@
         <p v-html="article.summary"></p>
         <p v-html="article.body"></p>
       </div>    
-    </main> 
-    
-    <script src="js/syntaxhighlighter.min.js"></script>    
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="js/axios.min.js"></script>
-    
-    <script src="app/components/LoadingBox.vue"></script>
-    <script src="app/components/AlertBox.vue"></script>
-    <script src="app/article.js"></script>
+    </main>
+
+    <script src="js/vue.min.js"></script>
+    <script src="js/syntaxhighlighter.min.js"></script>
+
+    <script src="js/article.js"></script>
   </body>
 </html>
