--- a/resources/index.html
+++ b/resources/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.ico">                    
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/syntaxhighlighter-theme-eclipse.css" rel="stylesheet">
-    <link href="css/blog.css" rel="stylesheet">    
+    <link href="css/blog.css" rel="stylesheet">
   </head>
   <body>    
   
@@ -18,12 +18,9 @@
       <blog-post v-for="post in posts" v-bind:post="post"></blog-post>
     </main> 
     
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="js/syntaxhighlighter.min.js"></script>    
-    <script src="js/axios.min.js"></script>
+    <script src="js/vue.min.js"></script>
+    <script src="js/syntaxhighlighter.min.js"></script>
      
-    <script src="app/components/LoadingBox.vue"></script>
-    <script src="app/components/AlertBox.vue"></script>
-    <script src="app/blog.js"></script>
+    <script src="js/blog.js"></script>
   </body>
 </html>
