vue router init

--- a/resources/article.html
+++ b/resources/article.html
@@ -23,6 +23,7 @@
 </div>
 
 <script src="js/vue.min.js"></script>
+<script src="js/vue-router.min.js"></script>
 <script src="js/syntaxhighlighter.min.js"></script>
 
 <script src="js/article.js"></script>
