--- a/resources/index.html
+++ b/resources/index.html
@@ -26,7 +26,7 @@
 
 
 <script src="js/vue.min.js"></script>
-<script src="js/vuex.min.js"></script>
+<script src="js/vue-router.min.js"></script>
 <script src="js/syntaxhighlighter.min.js"></script>
 
 <script src="js/blog.js"></script>
